# Interpreter-OCaml

./: README.md
HW1/: Assignment1.ml
HW2/: gt-1.ml
HW3/hw3_stub/_build/: .db  .digest-db  log
HW3/hw3_stub/_build/default/src/: ds.ml  interp.ml  lexer.ml  parser.ml  parser.mli  proc.cma  proc.ml-gen
HW3/hw3_stub/_build/default/src/.merlin-conf/: lib-proc
HW3/hw3_stub/_build/default/src/.proc.objs/: ds.ml.d  proc__Ast.impl.all-deps  proc__Ds.impl.all-deps  proc__Interp.impl.all-deps  proc__Lexer.impl.all-deps
HW3/hw3_stub/src/: interp.ml
HW3/hw3_stub/test/: .merlin
HW4/hw4_stub/: dune-project
HW4/hw4_stub/_build/: .db  .digest-db  log
HW4/hw4_stub/_build/default/src/: checked.cma  checked.ml-gen  interp.ml  lexer.ml  parser.ml  parser.mli  reM.ml
HW4/hw4_stub/src/: ast.ml  checker.ml  ds.ml  dst.ml  lexer.mll  parser.mly
HW4/hw4_stub/test/: .merlin  test.ml
SA1/sa1_stub/_build/: .db  .digest-db  log
SA1/sa1_stub/_build/default/src/: ds.ml  interp.ml  lexer.ml  parser.ml  parser.mli  recq.cma  recq.ml-gen
SA1/sa1_stub/src/: .ocamlinit  ast.ml  dune  lexer.mll  parser.mly
SA1/sa1_stub/test/: dune  test.ml
SA2/sa2_stub./: Makefile
SA2/sa2_stub./_build/: .db  .digest-db  log
SA2/sa2_stub./_build/default/.dune/: configurator  configurator.v2
SA2/sa2_stub./_build/default/src/: ds.ml  lexer.ml  lexer.mll  parser.ml  parser.mli  parser.mly  sool.cma  sool.ml-gen  store.ml
SA2/sa2_stub./src/: .ex1.sool.swp  .ocamlinit  ast.ml  dune  ex1.sool  interp.ml
SA2/sa2_stub./test/: dune  test_lib.ml
(+137 files in other folders)
