(library
 (name    sool)      ; name of the opam library
 (public_name sool)  ; required for generating documentation
                     ; also requires sool.opam in root of workspace
 (synopsis "Interpreter for SOOL")
 ;; (wrapped      false) ; true by default
)

; the next line avoids warnings from stopping the build
(env
  (dev
   (flags (:standard -warn-error -A))))

(ocamllex lexer)

(menhir
  (modules parser))

;; Note
;; Modules Ds,Ast,Interp,Lexer and Parser are placed as submodules inside a
;; wrapper module Sool. Sool__Ds is declared an alias to Sool.Ds
